--- a/.themes/eJournal/gtk-contained-dark.css
+++ b/.themes/eJournal/gtk-contained-dark.css
@@ -1,5 +1,5 @@
 /*************************** Check and Radio buttons * */
-* { padding: 0; -GtkToolButton-icon-spacing: 4; -GtkTextView-error-underline-color: #cc0000; -GtkScrolledWindow-scrollbar-spacing: 0; -GtkToolItemGroup-expander-size: 11; -GtkWidget-text-handle-width: 20; -GtkWidget-text-handle-height: 24; -GtkDialog-button-spacing: 4; -GtkDialog-action-area-border: 0; outline-color: alpha(currentColor,0.3); outline-style: dashed; outline-offset: -3px; outline-width: 1px; -gtk-outline-radius: 3px; -gtk-secondary-caret-color: #15539e; }
+* { padding: 0; -GtkToolButton-icon-spacing: 4; -GtkTextView-error-underline-color: #660000; -GtkScrolledWindow-scrollbar-spacing: 0; -GtkToolItemGroup-expander-size: 11; -GtkWidget-text-handle-width: 20; -GtkWidget-text-handle-height: 24; -GtkDialog-button-spacing: 4; -GtkDialog-action-area-border: 0; outline-color: alpha(currentColor,0.3); outline-style: dashed; outline-offset: -3px; outline-width: 1px; -gtk-outline-radius: 3px; -gtk-secondary-caret-color: #15539e; }
 
 /*************** Base States * */
 .background { color: #eeeeec; background-color: #353535; }
@@ -57,7 +57,7 @@ label:disabled:backdrop { color: #5b5b5b; }
 
 button label:disabled:backdrop { color: inherit; }
 
-label.error { color: #cc0000; }
+label.error { color: #660000; }
 
 label.error:disabled { color: rgba(204, 0, 0, 0.5); }
 
@@ -126,11 +126,11 @@ spinbutton:backdrop:not(.vertical), entry:backdrop { color: #d6d6d6; border-colo
 
 spinbutton:backdrop:disabled:not(.vertical), entry:backdrop:disabled { color: #5b5b5b; border-color: #202020; background-color: #323232; box-shadow: none; }
 
-spinbutton.error:not(.vertical), entry.error { color: #cc0000; border-color: #1a0000; }
+spinbutton.error:not(.vertical), entry.error { color: #660000; border-color: #1a0000; }
 
-spinbutton.error:focus:not(.vertical), entry.error:focus { box-shadow: inset 0 0 0 1px #cc0000; border-color: #1a0000; }
+spinbutton.error:focus:not(.vertical), entry.error:focus { box-shadow: inset 0 0 0 1px #660000; border-color: #1a0000; }
 
-spinbutton.error:not(.vertical) selection, entry.error selection { background-color: #cc0000; }
+spinbutton.error:not(.vertical) selection, entry.error selection { background-color: #660000; }
 
 spinbutton.warning:not(.vertical), entry.warning { color: #f57900; border-color: #432100; }
 
@@ -184,7 +184,7 @@ spinbutton:not(.vertical) progress:backdrop, entry progress:backdrop { backgroun
 
 .linked.vertical > spinbutton:drop(active):not(:only-child):not(.vertical) + spinbutton:not(.vertical), .linked.vertical > spinbutton:drop(active):not(:only-child):not(.vertical) + entry, .linked.vertical > spinbutton:drop(active):not(:only-child):not(.vertical) + button, .linked.vertical > spinbutton:drop(active):not(:only-child):not(.vertical) + combobox > box > button.combo, .linked.vertical > entry:drop(active):not(:only-child) + spinbutton:not(.vertical), .linked.vertical > entry:drop(active):not(:only-child) + entry, .linked.vertical > entry:drop(active):not(:only-child) + button, .linked.vertical > entry:drop(active):not(:only-child) + combobox > box > button.combo { border-top-color: #4e9a06; }
 
-spinbutton.error:not(.vertical), entry.error { color: #cc0000; }
+spinbutton.error:not(.vertical), entry.error { color: #660000; }
 
 treeview entry:focus:dir(rtl), treeview entry:focus:dir(ltr) { background-color: #2d2d2d; transition-property: color, background; }
 
@@ -2013,7 +2013,7 @@ widgets main borders color on backdrop windows */
 /*
 these are pretty self explicative */
 @define-color warning_color #f57900;
-@define-color error_color #cc0000;
+@define-color error_color #660000;
 @define-color success_color #26ab62;
 /*
 these colors are exported for the window manager and shouldn't be used in applications,
